--- a/AI/hw_num.ipynb
+++ b/AI/hw_num.ipynb
@@ -2,40 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "import cv2\n",
+    "import os\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python in /opt/homebrew/Caskroom/miniconda/base/lib/python3.11/site-packages (4.9.0.80)\n",
-      "Requirement already satisfied: numpy>=1.21.2 in /opt/homebrew/Caskroom/miniconda/base/lib/python3.11/site-packages (from opencv-python) (1.26.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Invalid filename: labels.csv\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 18\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m digit \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m digit\u001b[38;5;241m.\u001b[39msize:\n\u001b[1;32m     17\u001b[0m     resized_digit \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(digit, (\u001b[38;5;241m28\u001b[39m, \u001b[38;5;241m28\u001b[39m))\n\u001b[0;32m---> 18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mX_test shape:\u001b[39m\u001b[38;5;124m\"\u001b[39m, X_test\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_train shape:\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_train\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_test shape:\u001b[39m\u001b[38;5;124m\"\u001b[39m, y_test\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_test' is not defined"
      ]
     }
    ],
    "source": [
-    "%pip install opencv-python\n",
-    "import numpy as np\n",
-    "import pandas as pd \n",
-    "import cv2"
+    "# 加载图像和分配标签\n",
+    "image_folder = \"./datasets/num/handwritten_num/\"\n",
+    "image_files = sorted(os.listdir(image_folder))\n",
+    "digit_images = []\n",
+    "labels = []\n",
+    "for filename in image_files:\n",
+    "    img = cv2.imread(os.path.join(image_folder, filename), cv2.IMREAD_GRAYSCALE)\n",
+    "    digit_images.append(img)\n",
+    "    try:\n",
+    "        label = int(filename.split(\".\")[0])  # 使用文件名作为标签\n",
+    "        labels.append(label)\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid filename:\", filename)\n",
+    "\n",
+    "# 图像预处理\n",
+    "if not digit.size:\n",
+    "    digit = cv2.resize(digit, (28, 28))\n",
+    "    digit = cv2.bitwise_not(digit)\n",
+    "    digit = digit / 255.0\n",
+    "    digit = digit.reshape(1, 28, 28, 1)\n",
+    "resized_digit = cv2.resize(digit, (28, 28))\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 打印训练集和测试集的形状\n",
+    "print(\"X_train shape:\", X_train.shape)\n",
+    "print(\"X_test shape:\", X_test.shape)\n",
+    "print(\"y_train shape:\", y_train.shape)\n",
+    "print(\"y_test shape:\", y_test.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 使用cv2读取图片\n",
     "for i in range(1,10):\n",
     "    img_path = f'./datasets/num/{i}.png'\n",
     "    img = cv2.imread(img_path, cv2.IMREAD_COLOR)\n",
-    "    # 使图片的颜色空间转换为RGB\n",
     "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
-    "    #  将图片进行降噪 \n",
-    "    img = cv2.GaussianBlur(img, (3, 3), 0)"
+    "    img = cv2.GaussianBlur(img, (3, 3), 0)\n",
+    "    "
    ]
   }
  ],
